# agent-rig

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: PLAN-agent-tool.md  PLAN-cancellation.md  PLAN-conversation.md  PLAN-streaming.md  PLAN-subagents-mpsc.md  PLAN-token-usage.md  PLAN-tools.md  PRD.md  SPEC.md
docs/skills/: rust-agent-kit.md
examples/: agent_as_tool.rs  cancellation.rs  long_term_memory.rs  mpsc_auth_flow.rs  mpsc_runner.rs  multi_turn.rs  parallel_tool_calls.rs  simple_agent.rs  streaming_agent.rs  streaming_structured.rs  structured_output.rs  tool_calling.rs
skills/: agent-rig.md
src/: agent.rs  agent_tool.rs  auth.rs  conversation.rs  error.rs  lib.rs  model.rs  mpsc_runner.rs  runner.rs  tool.rs
src/models/: gemini.rs  mod.rs  ollama.rs
src/models/gemini/: mod.rs  tests.rs
src/models/ollama/: mod.rs  tests.rs
src/runner/: events.rs  mod.rs  tests.rs
src/tools/: agent_tool.rs  approval.rs  mod.rs  registry.rs  request.rs  tool.rs
src/tools/agent_tool/: mod.rs  tests.rs
tests/: integration_gemini.rs  integration_ollama.rs
