[package]
name = "rust-agent-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { git = "https://github.com/andreban/ollama-rs" }
google-genai = { git = "https://git.bandarra.me/andreban/google-genai.git" }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["json"] }
