[package]
name = "rust-agent-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { git = "https://github.com/andreban/ollama-rs" }
google-genai = { git = "https://git.bandarra.me/andreban/google-genai.git" }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1.44"
async-stream = "0.3.6"

[dev-dependencies]
schemars = "1.2.1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["json"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
