[package]
name = "agent-rig"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = []
gemini = ["dep:geologia"]
ollama = ["dep:ollama-rs"]
full = ["gemini", "ollama"]

[dependencies]
ollama-rs = { git = "https://github.com/andreban/ollama-rs", optional = true }
geologia = { git = "https://github.com/andreban/geologia", optional = true }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
async-stream = "0.3.6"

[dev-dependencies]
schemars = "1.2.1"
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["json"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[[test]]
name = "integration_gemini"
required-features = ["gemini"]

[[test]]
name = "integration_ollama"
required-features = ["ollama"]

[[example]]
name = "simple_agent"
required-features = ["gemini"]

[[example]]
name = "agent_as_tool"
required-features = ["gemini"]

[[example]]
name = "structured_output"
required-features = ["gemini"]

[[example]]
name = "tool_calling"
required-features = ["gemini"]

[[example]]
name = "streaming_agent"
required-features = ["gemini"]

[[example]]
name = "streaming_structured"
required-features = ["gemini"]

[[example]]
name = "multi_turn"
required-features = ["gemini"]

[[example]]
name = "parallel_tool_calls"
required-features = ["gemini"]

[[example]]
name = "long_term_memory"
required-features = ["gemini"]

[[example]]
name = "mpsc_runner"
required-features = ["gemini"]
